<resources>
    <string name="app_name" translatable="false">Space Fighter</string>
    <string name="about">About us</string>
    <string name="authors">Authors</string>
    <string name="version">Version</string>
    <string name="terms">Terms and Conditions</string>
    <string name="legal">Legal information</string>
    <string name="close">Close</string>
    <string name="play">Play</string>
    <string name="collection">Collection</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="adventure">Adventure (SOON)</string>
    <string name="arena">Arena</string>
    <string name="back">Back</string>
    <string name="select_build">Select your build</string>
    <string name="select_mode">Select game mode</string>
    <string name="finding_game">Searching for a game...</string>
    <string name="cancel">Cancel</string>
    <string name="next_turn">Next turn</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">Account doesnt exist, create one</string>
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password2">Repeat password</string>
    <string name="createaccount">Create Account</string>
    <string name="logout">Logout</string>
    <string name="your_deck">Your deck</string>
    <string name="save">Save</string>
    <string name="card_to_replace">Card to Replace</string>
    <string name="match_history">Match history</string>
    <string name="shotgun_desc">Shoots 5 dmg + Strength</string>
    <string name="str">"Str: "</string>
</resources>