<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000"
    android:padding="32dp">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        style="@style/MyCustomButton"
        android:id="@+id/btnTerms"
        android:onClick="onLegalButtonPressed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        style="@style/MyCustomButton"
        android:id="@+id/btnAbout"
        android:onClick="onAboutButtonPressed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyCustomButton"
        android:text="@string/close"
        android:layout_marginTop="16dp"
        android:id="@+id/btnCloseLegal"
        android:onClick="onCloseLegalButtonPressed"/>

</LinearLayout>