<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".activities.GamemodeSelection">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_mode"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdventure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdventure"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/adventure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:clickable="false"
        android:backgroundTint="@color/gray"
        android:onClick="onAdventureButtonPressed"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/arena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/btnArena"
        app:layout_constraintTop_toBottomOf="@+id/btnAdventure"
        android:onClick="onArenaButtonPressed"></Button>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnArena"
        android:onClick="onBackButtonPressed"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>