<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="12dp"

    tools:context=".activities.TermsAndCond">
  <TextView
      android:id="@+id/textAbout"
      android:text="@string/about"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scrollbars="vertical"
      android:textSize="50sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textAuthors"
      android:text="@string/authors"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textAbout" />

  <TextView
      android:id="@+id/textVersion"
      android:text="@string/version"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textAuthors" />


  </androidx.constraintlayout.widget.ConstraintLayout>