<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="android.text.TextUtils" />
        <variable
            name="registerViewModel"
            type="com.kronostudios.the_game.loginUtils.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_gravity="center_horizontal|center_vertical"
        tools:context=".activities.RegisterUserActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">



        <!--  Email Label -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={registerViewModel.emailLiveData}"
            android:error="@{registerViewModel.errorEmailLiveData}"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:text="@={registerViewModel.userLiveData}"
            android:error="@{registerViewModel.errorUserLiveData}"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={registerViewModel.passLiveData}"
            android:error="@{registerViewModel.passErrorLiveData}"
            android:minHeight="48dp" />
        <EditText
            android:id="@+id/editTextPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="yes"
            android:ems="10"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:text="@={registerViewModel.pass2LiveData}"
            android:error="@{registerViewModel.pass2ErrorLiveData}"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            style="@style/MyCustomButton"
            android:padding="12dp"
            android:onClick="@{() -> registerViewModel.create()}"
            android:enabled="@{!TextUtils.isEmpty(registerViewModel.emailLiveData) &amp;&amp; !TextUtils.isEmpty(registerViewModel.passLiveData) &amp;&amp; !TextUtils.isEmpty(registerViewModel.pass2LiveData) &amp;&amp; !TextUtils.isEmpty(registerViewModel.userLiveData)   }"
            android:text="@string/createaccount" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>