<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="android.text.TextUtils" />
        <variable
            name="loginViewModel"
            type="com.kronostudios.the_game.loginUtils.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        tools:context=".activities.LoginMainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <!--  Email Label -->
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.emailLiveData}"
                android:error="@{loginViewModel.errorEmailLiveData}"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="yes"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={loginViewModel.passLiveData}"
                android:error="@{loginViewModel.passErrorLiveData}"
                android:minHeight="48dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                style="@style/MyCustomButton"
                android:padding="12dp"
                android:onClick="@{() -> loginViewModel.login()}"
                android:enabled="@{!TextUtils.isEmpty(loginViewModel.emailLiveData) &amp;&amp; !TextUtils.isEmpty(loginViewModel.passLiveData) }"
                android:text="@string/login" />


            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="moveToRegister"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/no_account_yet_create_one"
                android:textSize="16sp" />


            <include
                android:id="@+id/linearLayoutProgressBar"
                layout="@layout/loading"
                android:visibility="@{loginViewModel.isLogged ? View.VISIBLE : View.GONE}" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>